# backend

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yaml
lambdas/delete-by-id/: Cargo.toml
lambdas/delete-by-id/src/: main.rs
lambdas/get-by-id/: Cargo.toml
lambdas/get-by-id/src/: main.rs
lambdas/post/: Cargo.toml
lambdas/post/src/: main.rs
lambdas/put-by-id/: Cargo.toml
lambdas/put-by-id/src/: main.rs
lambdas/shared/: Cargo.toml
lambdas/shared/src/: lib.rs  telemetry.rs
requests/: delete_item.http  get_item.http  post_item.http  put_item.http
requests/invoke_templates/: delete-by-id.json  get-by-id.json  post.json  put-by-id.json
