[workspace]
members = [
    "lambdas/get-by-id",
    "lambdas/put-by-id",
    "lambdas/delete-by-id",
    "lambdas/post",
    "lambdas/shared",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sami Barbut-Dica"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
lambda_http = { version = "0.13.0" }
tokio = { version = "1.39.2" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
uuid = { version = "1.10.0" }
serde = { version = "1.0.204" }
serde_json = { version = "1.0.121" }
opentelemetry = { version = "0.24.0" }
opentelemetry-otlp = { version = "0.17.0" }
opentelemetry_sdk = { version = "0.24.1" }
opentelemetry-semantic-conventions = { version = "0.16.0" }
tracing-bunyan-formatter = { version = "0.3.9" }
tracing-log = { version = "0.2.0" }
tracing-opentelemetry = { version = "0.25.0" }
anyhow = { version = "1.0.86" }
reqwest = { version = "0.12.5" }
secrecy = { version = "0.8.0" }
openssl = { version = "0.10.66" }