[package]
name = "get-by-id"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

lambda_http = { workspace = true, default-features = false, features = ["apigw_http", "opentelemetry"] }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4","fast-rng","macro-diagnostics"]}
serde_json = { workspace = true }

