[package]
name = "shared"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4","fast-rng","macro-diagnostics"]}